--- a/client/client/index.html
+++ b/client/client/index.html
@@ -8,7 +8,6 @@
     <!-- dependencies -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <!-- your scripts -->
-    <script src="env/config.js"></script>
     <script src="scripts/app.js"></script>
   </head>
   <body>
@@ -30,8 +29,8 @@
     <div id="chats"></div>
     <!-- START SOLUTION -->
     <script>
-      $(function(){
-        app.init()
+      $(function() {
+        app.init();
       });
     </script><!-- END SOLUTION -->
   </body>
