Refactor request-handler, messages now have .createdAt

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -19,6 +19,7 @@
       <div id="rooms">
         Room:
         <select id="roomSelect">
+          <option value='lobby'>lobby</option>
         </select>
       </div>
       <form action="#" id="send" method="post">
